--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script>
         let tg = window.Telegram.WebApp;
         let name = document.getElementById("username");
-        document.getElementById("username").value = tg.initDataUnsafe.username
+        document.getElementById("username").textContent = tg.initDataUnsafe.username
     </script>
 </body>
 </html>
