--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
-        let tg = window.Telegram.WebApp;
-        let name = document.getElementById("username");
-        document.getElementById("username").textContent = tg.initDataUnsafe.username;
+        const tg = window.Telegram.WebApp;
+        tg.ready(); 
+
+        const user = tg.initDataUnsafe?.user;
+
+        if (user) {
+            document.getElementById("username").textContent = user.username || user.first_name;
+        } else {
+            document.getElementById("username").textContent = "Unknown User";
+        }
     </script>
 </body>
 </html>
