--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
     <div id="main">
         <h1>Главная</h1>
-        <h1>Hey,</h1>
-        <h1 id="username"></h1>
+        <h1>Hey =)</h1>
+        <h1>Welcome, <span id="username">User</span>!</h1>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
